--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -182,8 +182,8 @@ bindsym $mod+comma scratchpad show
 
 bindsym $mod+Shift+c reload
 #bindsym $mod+Shift+r restart
-bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec "swaynag -e top -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? ' -b 'Yes, exit sway' 'swaymsg exit'"
+bindsym $mod+Shift+r exec "i3 restart"
+bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
 # Rules
 # Floating
@@ -270,9 +270,9 @@ bar {
         background #000000
         separator #757575
         #                  border             background         text
-        focused_workspace  $bg-color          $bg-color          $text-color
-        inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-        urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+        #focused_workspace  $bg-color          $bg-color          $text-color
+        #inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+        #urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
     }
 }
 
