--- a/compton/.config/compton.conf
+++ b/compton/.config/compton.conf
@@ -1,55 +1,99 @@
-backend = "glx";
-paint-on-overlay = true;
-glx-no-stencil = false;
-glx-no-rebind-pixmap = false;
-vsync = "opengl-swc"; 
-unredir-if-possible = false;
-# These are important. The first one enables the opengl backend. The last one is the vsync method. Depending on the driver you might need to use a different method.
-# The other options are smaller performance tweaks that work well in most cases. 
-# You can find the rest of the options here: https://github.com/chjj/compton/wiki/perf-guide, and here: https://github.com/chjj/compton/wiki/vsync-guide
-
-
 # Shadow
-shadow = false;			# Enabled client-side shadows on windows.
-no-dock-shadow = false;		# Avoid drawing shadows on dock/panel windows.
-no-dnd-shadow = true;		# Don't draw shadows on DND windows.
-clear-shadow = false;		# Zero the part of the shadow's mask behind the window (experimental).
-shadow-radius = 7;		# The blur radius for shadows. (default 12)
-shadow-offset-x = -7;		# The left offset for shadows. (default -15)
-shadow-offset-y = -7;		# The top offset for shadows. (default -15)
+shadow = true;
+shadow-radius = 7;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
+log-level = "warn";
+# log-file = "/path/to/your/log/file";
+# shadow-opacity = 0.7;
+# shadow-red = 0.0;
+# shadow-green = 0.0;
+# shadow-blue = 0.0;
 shadow-exclude = [
- "! name~=''",
- "n:e:Notification",
- "n:e:Plank",
- "n:e:Docky",
- "g:e:Synapse",
- "name='Polybar tray window'",
- "g:e:Conky",
- "n:w:*Firefox*",
- "n:w:*Chrome*",
- "n:w:*Chromium*",
- "class_g ?= 'Notify-osd'",
- "class_g ?= 'Cairo-dock'",
- "class_g ?= 'bar'",
- "class_g ?= 'Conky'"
+	"name = 'Notification'",
+	"class_g = 'Conky'",
+	"class_g ?= 'Notify-osd'",
+	"class_g = 'Cairo-clock'",
+	"_GTK_FRAME_EXTENTS@:c",
+  "n:e:Notification",
+  "n:e:Plank",
+  "n:e:Docky",
+  "g:e:Synapse",
+  "name='Polybar tray window'",
+  "g:e:Conky",
+  "n:w:*Firefox*",
+  "n:w:*Chrome*",
+  "n:w:*Chromium*",
+  "class_g ?= 'Notify-osd'",
+  "class_g ?= 'Cairo-dock'",
+  "class_g ?= 'bar'",
+  "class_g ?= 'Conky'" 
 ];
+# shadow-exclude = "n:e:Notification";
+# shadow-exclude-reg = "x10+0+0";
+# xinerama-shadow-crop = true;
 
-
-# The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches 
-# (most applications are fine, only apps that do weird things with xshapes or argb are affected). 
-# This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
+# Opacity
+#inactive-opacity = 0.8;
+# active-opacity = 0.8;
+#frame-opacity = 0.7;
+#inactive-opacity-override = false;
+# inactive-dim = 0.2;
+# inactive-dim-fixed = true;
+# blur-background = true;
+# blur-background-frame = true;
+blur-kern = "3x3box";
+# blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+# blur-background-fixed = true;
+blur-background-exclude = [
+	"window_type = 'dock'",
+	"window_type = 'desktop'",
+	"_GTK_FRAME_EXTENTS@:c"
+];
+# opacity-rule = [ "80:class_g = 'URxvt'" ];
 
 # Fading
-fading = true; # Fade windows during opacity changes.
-fade-delta = 4; # The time between steps in a fade in milliseconds. (default 10).
-fade-in-step = 0.03; # Opacity change between steps while fading in. (default 0.028).
-fade-out-step = 0.03; # Opacity change between steps while fading out. (default 0.03).
-#no-fading-openclose = true; # Fade windows in/out when opening/closing
+fading = true;
+fade-delta = 4;
+fade-in-step = 0.03;
+fade-out-step = 0.03;
+# no-fading-openclose = true;
+# no-fading-destroyed-argb = true;
+fade-exclude = [ ];
 
-detect-client-opacity = true; # This prevents opacity being ignored for some apps. For example without this enabled my xfce4-notifyd is 100% opacity no matter what.
+# Other
+#backend = "xrender";
+#backend = "glx";
+backend = "xr_glx_hybrid";
+mark-wmwin-focused = true;
+mark-ovredir-focused = true;
+# use-ewmh-active-win = true;
+detect-rounded-corners = true;
+detect-client-opacity = true;
+refresh-rate = 0;
+vsync = true;
+#sw-opti = true;
+unredir-if-possible = true;
+# unredir-if-possible-delay = 5000;
+# unredir-if-possible-exclude = [ ];
+focus-exclude = [ "class_g = 'Cairo-clock'" ];
+detect-transient = true;
+detect-client-leader = true;
+invert-color-include = [ ];
+resize-damage = 1;
+
+# GLX backend
+glx-no-stencil = true;
+glx-no-rebind-pixmap = true;
+xrender-sync-fence = true;
+use-damage = false;
 
 # Window type settings
 wintypes:
 {
-  tooltip = { fade = true; shadow = false; };
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  dock = { shadow = false; }
+  dnd = { shadow = false; }
+  popup_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 0.8; }
 };
