--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -243,8 +243,8 @@ font_size 12.0
 #: Window layout {{{
 
 # remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
+initial_window_width  80c
+initial_window_height 24c
 
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
@@ -911,3 +911,5 @@ font_size 12.0
 #: }}}
 
 # }}}
+
+#linux_display_server wayland
