--- a/mpv/.config/mpv/mpv.conf
+++ b/mpv/.config/mpv/mpv.conf
@@ -1,6 +1,8 @@
-profile=gpu-hq
-scale=ewa_lanczossharp
-cscale=ewa_lanczossharp
-video-sync=display-resample
-interpolation
-tscale=oversample
+#profile=gpu-hq
+#scale=ewa_lanczossharp
+#cscale=ewa_lanczossharp
+#video-sync=display-resample
+#interpolation
+#tscale=oversample
+ytdl-format=bestvideo[height<=?1440]+bestaudio/best
+hwdec=vaapi
