--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      SF Mono
+font_family      SF Mono Regular
 bold_font        SF Mono Bold
 italic_font      SF Mono Italic
 bold_italic_font SF Mono Bold Italic
@@ -22,7 +22,7 @@ bold_italic_font SF Mono Bold Italic
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 12.0
+font_size 14.0
 
 #: Font size (in pts)
 
@@ -522,7 +522,7 @@ initial_window_height 24c
 #: functionality is a security risk as it means that any program, even
 #: one running on a remote server via SSH can read your clipboard.
 
-# term xterm-kitty
+ term xterm-256color
 
 #: The value of the TERM environment variable to set. Changing this
 #: can break many terminal programs, only change it if you know what
