--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -14,30 +14,17 @@ shadow-exclude = [
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
-	"_GTK_FRAME_EXTENTS@:c",
-  "n:e:Notification",
-  "n:e:Plank",
-  "n:e:Docky",
-  "g:e:Synapse",
-  "name='Polybar tray window'",
-  "g:e:Conky",
-  "n:w:*Firefox*",
-  "n:w:*Chrome*",
-  "n:w:*Chromium*",
-  "class_g ?= 'Notify-osd'",
-  "class_g ?= 'Cairo-dock'",
-  "class_g ?= 'bar'",
-  "class_g ?= 'Conky'" 
+	"_GTK_FRAME_EXTENTS@:c"
 ];
 # shadow-exclude = "n:e:Notification";
 # shadow-exclude-reg = "x10+0+0";
 # xinerama-shadow-crop = true;
 
 # Opacity
-#inactive-opacity = 0.8;
+inactive-opacity = 0.8;
 # active-opacity = 0.8;
-#frame-opacity = 0.7;
-#inactive-opacity-override = false;
+frame-opacity = 0.7;
+inactive-opacity-override = false;
 # inactive-dim = 0.2;
 # inactive-dim-fixed = true;
 # blur-background = true;
@@ -52,9 +39,11 @@ blur-background-exclude = [
 ];
 # opacity-rule = [ "80:class_g = 'URxvt'" ];
 
+# max-brightness = 0.66
+
 # Fading
 fading = true;
-fade-delta = 4;
+# fade-delta = 30;
 fade-in-step = 0.03;
 fade-out-step = 0.03;
 # no-fading-openclose = true;
@@ -62,9 +51,7 @@ fade-out-step = 0.03;
 fade-exclude = [ ];
 
 # Other
-#backend = "xrender";
-#backend = "glx";
-backend = "xr_glx_hybrid";
+backend = "xrender";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 # use-ewmh-active-win = true;
@@ -72,21 +59,21 @@ detect-rounded-corners = true;
 detect-client-opacity = true;
 refresh-rate = 0;
 vsync = true;
-#sw-opti = true;
-unredir-if-possible = true;
+# sw-opti = true;
+# unredir-if-possible = true;
 # unredir-if-possible-delay = 5000;
 # unredir-if-possible-exclude = [ ];
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 detect-transient = true;
 detect-client-leader = true;
 invert-color-include = [ ];
-resize-damage = 1;
+# resize-damage = 1;
 
 # GLX backend
-glx-no-stencil = true;
-glx-no-rebind-pixmap = true;
-xrender-sync-fence = true;
-use-damage = false;
+# glx-no-stencil = true;
+# glx-no-rebind-pixmap = true;
+# xrender-sync-fence = true;
+use-damage = true;
 
 # Window type settings
 wintypes:
