--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -21,13 +21,14 @@ set $hdmi   HDMI-A-2
 
 # Wallpaper
 
-output "*" bg /home/alex/Pictures/Hysteresis.png fill
+#output "*" bg /home/alex/Pictures/Hysteresis.png fill
 
+#seat seat0 xcursor_theme Openzone_Black_Slim 48
 
 # Keyboard
 input type:keyboard {
     xkb_layout us
-    xkb_options caps:escape
+    #xkb_options "caps:escape"
 }
 
 # Thinkpad Touchpad
@@ -37,6 +38,10 @@ input "2:7:SynPS/2_Synaptics_TouchPad" {
     natural_scroll enabled
     middle_emulation enabled
 }
+
+# Thinkpad Touchscreen
+input 1386:20915:Wacom_Pen_and_multitouch_sensor_Finger map_to_output eDP-1
+input 1386:20915:Wacom_Pen_and_multitouch_sensor_Pen    map_to_output eDP-1
 
 
 set $WS1 "1:term"
@@ -57,18 +62,21 @@ exec_always pkill mako;			exec mako
 exec_always pkill wayvnc;		exec wayvnc 127.0.0.1
 exec_always pkill mpris-proxy;		exec mpris-proxy
 exec_always pkill ydotoold;		exec ydotoold
-exec_always pkill waybar; 		exec waybar
+#exec_always pkill waybar; 		exec waybar
 exec_always pkill flashfocus;		exec flashfocus
 exec_always pkill nm-applet;		exec nm-applet --indicator
 exec_always pkill mconnectd;		exec mconnect -d
 exec_always pkill blueman-applet;	exec blueman-applet
 exec_always pkill kanshi;		exec kanshi
+exec_always pkill gammastep;		exec gammastep
+#exec_always pkill squeekboard;		exec squeekboard
 exec_always pkill signal-daemon;	exec ~/bin/signal-daemon
 
 
 # Aesthetics
 # font pango:Iosevka Nerd Font 14
-font pango:Fira Code Nerd Font Bold 10
+#font pango:Fira Code Nerd Font Bold 10
+font pango: CaskaydiaCove Nerd Font Mono 10
 gaps inner 14
 gaps outer 0
 default_border pixel 4
@@ -126,8 +134,7 @@ bindsym $mod+Shift+d exec alacritty -t swaylauncher -e \
 bindsym $mod+d exec alacritty -t swaylauncher \
 		-e "$HOME/.config/sway/sway-launcher-desktop.sh"
 
-#bindsym $mod+d 	 exec rofi -show drun
-bindsym $mod+Tab exec rofi -show window
+#bindsym $mod+d exec rofi -show drun
 
 # Corrupt Lock Screen
 
@@ -145,17 +152,17 @@ bindsym --release Print exec grim -g "$(slurp)" - | wl-copy
 exec mkfifo $SWAYSOCK.wob && tail -f $SWAYSOCK.wob | wob
 
 
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 2%+ unmute \
+bindsym --locked XF86AudioRaiseVolume exec amixer -q set Master 2%+ unmute \
 	&& amixer sget Master \
 	| grep 'Right:' \
 	| awk -F'[][]' '{ print substr($2, 0, length($2)-1) }' \
 	> $SWAYSOCK.wob
-bindsym XF86AudioLowerVolume exec amixer -q set Master 2%- unmute \
+bindsym --locked XF86AudioLowerVolume exec amixer -q set Master 2%- unmute \
 	&& amixer sget Master \
 	| grep 'Right:' \
 	| awk -F'[][]' '{ print substr($2, 0, length($2)-1) }' \
 	> $SWAYSOCK.wob
-bindsym XF86AudioMute exec (amixer get Master \
+bindsym --locked XF86AudioMute exec (amixer get Master \
 	| grep off > /dev/null \
 	&& amixer -q set Master unmute \
 	&& amixer sget Master \
@@ -166,20 +173,20 @@ bindsym XF86AudioMute exec (amixer get Master \
 	> $SWAYSOCK.wob)
 
 
-bindsym XF86MonBrightnessUp exec light -A 5 \
+bindsym --locked XF86MonBrightnessUp exec light -A 5 \
 	&& light -G \
 	| cut -d'.' -f1 \
 	> $SWAYSOCK.wob
-bindsym XF86MonBrightnessDown exec light -U 5 \
+bindsym --locked XF86MonBrightnessDown exec light -U 5 \
 	&& light -G \
 	| cut -d'.' -f1 \
 	> $SWAYSOCK.wob
 
 
-bindsym XF86AudioMicMute exec amixer sset Capture,0 toggle
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym --locked XF86AudioMicMute exec amixer sset Capture,0 toggle
+bindsym --locked XF86AudioPlay exec playerctl play-pause
+bindsym --locked XF86AudioNext exec playerctl next
+bindsym --locked XF86AudioPrev exec playerctl previous
 
 
 bindsym $mod+$left focus left
