--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -17,20 +17,24 @@ set $WS8 8
 set $WS9 9
 set $WS10 0
 
-# Autostarts
+# OneShot
 exec --no-startup-id xsetroot -cursor_name left_ptr
 exec --no-startup-id setxkbmap -option ctrl:nocaps
-exec --no-startup-id dunst
-exec --no-startup-id emacs --daemon
-exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-#exec --no-startup-id ~/.config/polybar/launch.sh
-exec --no-startup-id ~/bin/autorotate
-exec --no-startup-id ~/bin/autolock
 
-# Lifestyle
+# Tablet
+# exec --no-startup-id ~/bin/autolock
+
+# Quality of Life
+exec --no-startup-id picom --experimental-backends
 exec --no-startup-id devmon
 exec --no-startup-id unclutter
-exec --no-startup-id compton -b
+exec --no-startup-id picom -b
+exec --no-startup-id dunst
+exec --no-startup-id redshift
+exec --no-startup-id flashfocus
+exec --no-startup-id mpris-proxy
+exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec --no-startup-id python ~/.config/xob/pulse-volume-watcher.py | xob
 
 # Applets
 #exec --no-startup-id kdeconnect-indicator
@@ -40,39 +44,11 @@ exec --no-startup-id compton -b
 #exec --no-startup-id pasystray
 
 # Aesthetics
-# font pango:Iosevka Term 10
-font pango:SF Mono 10
-#gaps inner 8
+font pango:CaskaydiaCove Nerd Font Mono 10
+gaps inner 14
 #gaps outer 6
-gaps inner 0
-gaps outer 0
 new_window pixel 4
 new_float pixel 4
-
-# xresource colors
-#set_from_resource $color0 color0 
-#set_from_resource $color1 color1 
-#set_from_resource $color2 color2 
-#set_from_resource $color3 color3 
-#set_from_resource $color4 color4 
-#set_from_resource $color5 color5 
-#set_from_resource $color6 color6 
-#set_from_resource $color7 color7 
-#set_from_resource $color8 color8 
-#set_from_resource $color9 color9 
-#set_from_resource $color10 color10 
-#set_from_resource $color11 color11 
-#set_from_resource $color12 color12 
-#set_from_resource $color13 color13 
-#set_from_resource $color14 color14 
-#set_from_resource $color15 color15 
-#set_from_resource $color16 color16 
-#set_from_resource $color17 color17 
-#set_from_resource $color18 color18 
-#set_from_resource $color19 color19 
-#set_from_resource $color20 color20 
-#set_from_resource $color21 color21 
-
 
 # class                 border  backgr. text    indicator child_border
 client.focused          #c2c3c7 #5f676a #ffffff #ff77a8   #29adff
@@ -80,17 +56,7 @@ client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
 client.unfocused        #333333 #222222 #888888 #292d2e   #222222
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
-#
 client.background       #ffffff
-
-# class                 border  backgr. text    indicator child_border
-#client.focused          $color21 #5f676a $color15 $color5 $color6
-#client.focused_inactive #333333 #5f676a $color15 #484e50   #5f676a
-#client.unfocused        #333333 #222222 #888888 #292d2e   #222222
-#client.urgent           #2f343a $color1  $color15 $color1    $color1
-#client.placeholder      $color0  #0c0c0c $color15 $color0   #0c0c0c
-
-#client.background       color15
 
 # Keybinds
 
@@ -100,16 +66,15 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # Terminal
-#bindsym $mod+Return exec alacritty
-bindsym $mod+Return exec kitty
+bindsym $mod+Return exec alacritty
+#bindsym $mod+Return exec kitty
 
-#bindsym $mod+Shift+Return exec alacritty -t floaterm
-bindsym $mod+Shift+Return exec kitty -T floaterm --class floaterm
+bindsym $mod+Shift+Return exec alacritty -t floaterm
+#bindsym $mod+Shift+Return exec kitty -T floaterm --class floaterm
 
 bindsym $mod+Shift+x kill
 bindsym $mod+Shift+q kill
 bindsym $mod+n exec networkmanager_dmenu
-#bindsym $mod+b exec polybar-msg cmd toggle
 
 # Open
 bindsym $mod+Shift+z exec ~/bin/phonesend.sh share-url "$(xclip -o)"
@@ -121,17 +86,17 @@ bindsym $mod+Tab exec rofi -show window
 bindsym $mod+q exec ~/bin/lock
 
 # XF86
-bindsym XF86MonBrightnessUp exec xbacklight -inc 10
-bindsym XF86MonBrightnessDown exec xbacklight -dec 10
-bindsym XF86KbdBrightnessUp exec 
-bindsym XF86KbdBrightnessDown exec
-bindsym XF86AudioRaiseVolume exec amixer -D pulse sset Master 5%+ && amixer -D pulse sset Master unmute
-bindsym XF86AudioLowerVolume exec amixer -D pulse sset Master 5%- && amixer -D pulse sset Master unmute
-bindsym XF86AudioMute exec amixer -D pulse sset Master mute
-bindsym XF86AudioMicMute exec amixer sset Capture,0 toggle
-bindsym XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+bindsym XF86MonBrightnessUp 	exec light -A 5
+bindsym XF86MonBrightnessDown 	exec light -U 5
+bindsym XF86AudioRaiseVolume 	exec amixer -D pulse sset Master 5%+ && \
+				amixer -D pulse sset Master unmute
+bindsym XF86AudioLowerVolume 	exec amixer -D pulse sset Master 5%- && \
+				amixer -D pulse sset Master unmute
+bindsym XF86AudioMute 		exec amixer -D pulse sset Master toggle
+bindsym XF86AudioMicMute 	exec amixer sset Capture,0 toggle
+bindsym XF86AudioPlay 		exec playerctl play-pause
+bindsym XF86AudioNext 		exec playerctl next
+bindsym XF86AudioPrev 		exec playerctl previous
 
 bindsym $mod+$left focus left
 bindsym $mod+$down focus down
