--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -14,10 +14,10 @@
 #bold_font        Iosevka Term Bold
 #italic_font      Iosevka Term Italic
 #bold_italic_font Iosevka Term Bold Italic
-font_family      Fira Code Nerd Font Mono
-bold_font        Fira Code Nerd Font Mono Bold
-italic_font      Fira Code Nerd Font Mono Italic
-bold_italic_font Fira Code Nerd Font Mono Bold Italic
+font_family      CaskaydiaCove Nerd Font Mono
+bold_font        CaskaydiaCove Nerd Font Mono Bold
+italic_font      CaskaydiaCove Nerd Font Mono Italic
+bold_italic_font CaskaydiaCove Nerd Font Mono Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. By default they are derived automatically, by the OSes
