--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -1,26 +1,175 @@
 # Basics
 backend = "glx";
+experimental-backends = true;
+log-level = "info";
 vsync = true;
 
+
+# Rounded Corners
+corner-radius = 20.0;
+round-borders = 1;
+
+rounded-corners-exclude = [
+  #"window_type = 'normal'",
+  "window_type = 'tooltip'",
+  "class_g = 'Polybar'",
+  #"class_g = 'code-oss'",
+  #"class_g = 'firefox-nightly'",
+  #"class_g = 'Deadd-notification-center'",
+  "class_g = 'xob'"
+];
+
+round-borders-exclude = [
+  #"class_g = 'TelegramDesktop'",
+];
+
+round-borders-rule = [
+  "4:class_g = 'Deadd-notification-center'",
+  "5:class_g      *= ''", # Everything
+  "4:class_g      = 'Vmware'",
+  "4:class_g      = 'Dunst'",
+  "4:class_g      = 'Spotify'",
+  "4:class_g      = 'RAIL'",
+  "4:class_g      = 'xfreerdp'",
+  "4:class_g      = 'Firefox'",
+  "4:class_g      = 'Nightly'",
+  "4:class_g      = 'XTerm'",
+  "4:class_g      = 'URxvt'",
+  "4:class_g     = 'Alacritty'",
+  "4:class_g     = 'Signal'"
+];
+
 # Kawase Blur
+#blur: {
+#	method = "dual_kawase";
+#	strength = 8;
+#};
+
 blur: {
-	method = "dual_kawase";
-	strength = 8;
-};
+  # requires: https://github.com/ibhagwan/picom
+  method = "kawase";
+  #method = "kernel";
+  strength = 7;
+  # deviation = 1.0;
+  # kernel = "11x11gaussian";
+  background = false;
+  background-frame = false;
+  background-fixed = false;
+  kern = "3x3box";
+}
+
+blur-background-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'",
+  #"window_type = 'dock'",
+  #"window_type = 'desktop'",
+  #"class_g = 'URxvt'",
+  #
+  # prevents picom from blurring the background
+  # when taking selection screenshot with `main`
+  # https://github.com/naelstrof/maim/issues/130
+  "class_g = 'slop'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
 
 # Shadows
-shadows = true;
-shadow-radius = 7;
-shadow-offset-x = -7;
-shadow-offset-y = -7;
+shadows = false;
+clear-shadow = true;
+no-dnd-shadow = true;
+no-dock-shadow = true;
+shadow-radius = 12;
+shadow-offset-x = -12;
+shadow-offset-y = -12;
+shadow-opacity = .5;
+shadow-red = 0.00;
+shadow-green = 0.00;
+shadow-blue = 0.00;
 shadow-exclude = [
+	#"! name=''",
+	"name = 'Plank'",
 	"name = 'Notification'",
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
 	"_GTK_FRAME_EXTENTS@:c"
 ];
+shadow-ignore-shaped = false;
 
 # Fading
 fading = true;
+fade-in-step = 1;
+fade-out-step = 1;
+fade-exclude = [
+  "class_g = 'slop'",   # maim
+]
 
+focus-exclude = [
+	"class_g = 'slop'"
+];
+
+opacity-rule = [
+  "80:class_g     = 'Bar'",             # lemonbar
+  "100:class_g    = 'slop'",            # maim
+  "100:class_g    = 'XTerm'",
+  "100:class_g    = 'URxvt'",
+  "100:class_g    = 'kitty'",
+  "100:class_g    = 'Alacritty'",
+  "80:class_g     = 'Polybar'",
+  "100:class_g    = 'code-oss'",
+  "100:class_g    = 'Meld'",
+  "70:class_g     = 'TelegramDesktop'",
+  "90:class_g     = 'Joplin'",
+  "100:class_g    = 'firefox'",
+  "100:class_g    = 'Thunderbird'",
+];
+
+# Try to detect WM windows (a non-override-redirect window with no 
+# child that has 'WM_STATE') and mark them as active.
+#
+# mark-wmwin-focused = false
+mark-wmwin-focused = true;
+
+# Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
+# mark-ovredir-focused = false
+mark-ovredir-focused = true;
+
+# Try to detect windows with rounded corners and don't consider them 
+# shaped windows. The accuracy is not very high, unfortunately.
+#
+# detect-rounded-corners = false
+detect-rounded-corners = true;
+
+# Detect '_NET_WM_OPACITY' on client windows, useful for window managers
+# not passing '_NET_WM_OPACITY' of client windows to frame windows.
+#
+# detect-client-opacity = false
+detect-client-opacity = true;
+
+# Specify refresh rate of the screen. If not specified or 0, picom will 
+# try detecting this with X RandR extension.
+#
+# refresh-rate = 60
+refresh-rate = 0
+
+# Use 'WM_TRANSIENT_FOR' to group windows, and consider windows 
+# in the same group focused at the same time.
+#
+# detect-transient = false
+detect-transient = true
+
+# Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
+# group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
+# detect-transient is enabled, too.
+#
+# detect-client-leader = false
+detect-client-leader = true
+
+wintypes:
+{
+  normal = { fade = false; shadow = false; }
+  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  dock = { shadow = false; }
+  dnd = { shadow = true; }
+  popup_menu = { opacity = 0.8; }
+  dropdown_menu = { opacity = 0.8; }
+};
