--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -329,20 +329,20 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-#bar {
-#    status_command i3status
-#    position top
-#    font pango:SF Mono 10
+bar {
+    status_command i3status
+    position top
+    font pango:CaskaydiaCove Nerd Font Mono
 
-#        colors {
-#        background #000000
-#        separator #757575
+        colors {
+        background #000000
+        separator #757575
         #                  border             background         text
         #focused_workspace  $bg-color          $bg-color          $text-color
         #inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
         #urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-#    }
-#}
+    }
+}
 
 
 exec --no-startup-id i3-msg "workspace $WS1"
