--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -13,6 +13,7 @@ rounded-corners-exclude = [
   #"window_type = 'normal'",
   "window_type = 'tooltip'",
   "class_g = 'Polybar'",
+  "class_g = 'i3bar'",
   #"class_g = 'code-oss'",
   #"class_g = 'firefox-nightly'",
   #"class_g = 'Deadd-notification-center'",
@@ -75,8 +76,8 @@ blur-background-exclude = [
 # Shadows
 shadows = false;
 clear-shadow = true;
-no-dnd-shadow = true;
-no-dock-shadow = true;
+#no-dnd-shadow = true;
+#no-dock-shadow = true;
 shadow-radius = 12;
 shadow-offset-x = -12;
 shadow-offset-y = -12;
