--- a/aconfmgr/.config/aconfmgr/files/etc/pacman.conf
+++ b/aconfmgr/.config/aconfmgr/files/etc/pacman.conf
@@ -25,7 +25,8 @@ Architecture = auto
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
 # IgnorePkg    = evolution evolution-ews evolution-data-server 
 # IgnorePkg = linux-zen linux-zen-headers linux-firmware
-IgnorePkg = bluez bluez-libs bluez-utils
+#IgnorePkg = bluez bluez-libs bluez-utils
+IgnorePkg = ccollab-client
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -118,14 +119,6 @@ Include = /etc/pacman.d/mirrorlist
 [chaotic-aur]
 Include = /etc/pacman.d/chaotic-mirrorlist
 
-[delifer]
-SigLevel = Optional TrustAll
-Server = https://repo.delifer.ca/archlinux/delifer
-#Server = https://repo.delifer.ca/archlinux
-#Server = https://repo.delifer.ca/archlinux
-#Server = https://repo.delifer.ca/archlinux
-#Server = https://repo.delifer.ca/archlinux
-
 [archzfs]
 # Mirror - US
 Server = https://zxcvfdsa.com/archzfs/$repo/$arch
@@ -139,4 +132,7 @@ Server = https://mirror.biocrafting.net/archlinux/archzfs/$repo/x86_64
 Server = https://mirror.in.themindsmaze.com/archzfs/$repo/x86_64
 
 
+[blackarch]
+Include = /etc/pacman.d/blackarch-mirrorlist
 
+Include = /etc/pacman.d/delifer
