--- a/picom/.config/picom.conf
+++ b/picom/.config/picom.conf
@@ -1,8 +1,10 @@
 # Basics
+# backend = "xrender";
+# backend = "glx";
 backend = "glx";
 experimental-backends = true;
 log-level = "info";
-vsync = true;
+vsync = false;
 
 # Rounded Corners
 corner-radius = 12.0;
@@ -181,6 +183,7 @@ wintypes:
 
 wintypes:
 {
+  #normal = { blur = 0; opacity = 1.0; fade = false; shadow = true; }
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
