--- a/i3/.config/i3status-rust/config.toml
+++ b/i3/.config/i3status-rust/config.toml
@@ -109,10 +109,10 @@ format_singular = "{pacman}"
 format_up_to_date = "up to date"
 # If a linux update is availble, but no ZFS package, it won't be possible to
 # actually perform a system upgrade, so we show a warning.
-warning_updates_regex = "(linux|linux-lts|linux-zen)"
+warning_updates_regex = "(linux|linux-lts|linux-zen|linux-xanmod-tt)"
 # If ZFS is available, we know that we can and should do an upgrade, so we show
 # the status as critical.
-critical_updates_regex = "(zfs|zfs-lts|zfs-linux-zen)"
+critical_updates_regex = "(zfs|zfs-lts|zfs-linux-zen|zfs-dkms)"
 
 [[block]]
 block = "time"
