remove delifer repo

--- a/aconfmgr/.config/aconfmgr/files/etc/pacman.conf
+++ b/aconfmgr/.config/aconfmgr/files/etc/pacman.conf
@@ -135,4 +135,4 @@ Server = https://mirror.in.themindsmaze.com/archzfs/$repo/x86_64
 [blackarch]
 Include = /etc/pacman.d/blackarch-mirrorlist
 
-Include = /etc/pacman.d/delifer
+#Include = /etc/pacman.d/delifer
